<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallet_screen_background"
    tools:context=".ui.employee_selection.EmployeeSelectionActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:src="@drawable/employee_selection_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/primary_100" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_xl"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:text="@string/employee_selection_title"
            android:textColor="@color/primary_500"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:text="@string/employee_selection_subtitle"
            android:textColor="@color/neutral_600"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvEmployees"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/spacing_medium"
            android:clipToPadding="false"
            android:contentDescription="@string/employee_list_content_description"
            android:paddingTop="@dimen/spacing_small"
            android:paddingBottom="@dimen/spacing_large"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitle"
            tools:listitem="@layout/employee_list_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/loadingView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_medium">

            <View android:layout_width="200dp" android:layout_height="32dp" android:background="@color/shimmerColor" android:layout_marginBottom="16dp"/>
            <View android:layout_width="match_parent" android:layout_height="20dp" android:background="@color/shimmerColor" android:layout_marginBottom="32dp"/>

            <include layout="@layout/employee_shimmer_item" />
            <include layout="@layout/employee_shimmer_item" />
            <include layout="@layout/employee_shimmer_item" />
            <include layout="@layout/employee_shimmer_item" />
        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>

    <LinearLayout
        android:id="@+id/errorView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/spacing_xl"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/employees_default_error_message"
            android:textAlignment="center"
            android:textColor="@color/primary_500"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reloadEmployees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            style="@style/Widget.DS.PrimaryButton"
            android:text="@string/reload_btn"
            app:cornerRadius="@dimen/radius_large" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
